# sprintstart-ai

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: branch-protection.yml  ci.yml  publish.yml
blueprints/: area-backend.yaml  area-devops.yaml  area-frontend.yaml  global.yaml
scripts/: _client.py  blueprint_refresh.py  blueprints_cli.py  chat_cli.py  chunk_inspector_cli.py  cli_colors.py  corpus_cli.py  ingest_cli.py  onboarding_cli.py  sprintstart.py
src/: main.py
src/agents/: __init__.py  artifact_summary.py  base.py  orchestrator.py  orchestrator_agent.py  synthesis_agent.py
src/api/: app.py  dependencies.py  schemas.py  sse.py
src/ingestion/: chunker.py  code_parser.py  context_aware_chunker.py  image_parser.py  language_utils.py  mapper.py  metadata_store.py  models.py  parser.py  pdf_parser.py  source_role.py  source_state_store.py  text_parser.py  tree_sitter_languages.py  tree_sitter_parser.py  utils.py
src/insights/: faq.py  knowledge_gaps.py  redaction.py
src/llm/: anthropic_client.py  base.py  errors.py  local_client.py  ollama_client.py  openai_client.py  parsing.py  split_client.py  tool_call_recovery.py
src/onboarding/: blueprints.py  buddy.py  buddy_agent.py  buddy_open.py  checks.py  citations.py  drafts.py  generation.py  graph_generation.py  graph_models.py  lesson_models.py  lessons.py  matching.py  models.py  module_models.py  modules.py  orchestrator.py  orientation.py  orientation_models.py  pipeline.py  progress.py  quality.py  registry.py  scope.py  similarity.py  starter_work.py  synthesis.py  verification.py
src/rag/: citation.py  filters.py  hybrid.py  prompt.py  query_expansion.py  retriever.py  source_filter.py  source_kind.py  types.py
src/store/: base.py  chroma_store.py
tests/: conftest.py  test_chroma_store.py  test_citation.py  test_hybrid_retrieval.py  test_main.py  test_retriever.py
tests/agents/: test_agent.py  test_orchestrator.py  test_tools.py
tests/api/: test_assessment.py  test_blueprints.py  test_buddy.py  test_chat.py  test_client.py  test_competency_graph.py  test_dependencies.py  test_grading.py  test_ingest.py  test_ingest_image.py  test_ingest_metadata.py  test_ingest_run.py  test_insights_faq.py  test_knowledge_gaps.py  test_lessons.py  test_modules.py  test_onboarding.py  test_orientation.py  test_sources.py  test_starter_work.py  test_summaries.py  test_title.py  test_vector_db.py  test_verification.py
tests/ingestion/: test_chunker.py  test_code_parser.py  test_context_aware_chunker.py  test_image_parser.py  test_ingest.py  test_mapper.py  test_metadata_store.py  test_models.py  test_parser.py  test_pdf_parser.py  test_source_role.py  test_source_state_store.py  test_utils.py
tests/insights/: test_faq.py  test_knowledge_gaps.py  test_redaction.py
tests/llm/: test_ollama_client.py  test_openai_client.py  test_stub.py  test_tool_call_recovery.py
tests/onboarding/: test_blueprints.py  test_buddy_agent.py  test_buddy_handoff.py  test_buddy_open.py  test_checks.py  test_drafts.py  test_generation.py  test_graph_generation.py  test_lessons.py  (+9 more)
(+50 files in other folders)
