[project]
name = "sprintstart-ai"
version = "0.1.0"
description = "SprintStart is an AI-powered onboarding and training platform designed to support software teams by transforming scattered project artifacts into actionable, personalized project knowledge. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "chromadb>=1.5.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-cov",
]
