[project]
name = "sprintstart-ai"
version = "0.1.0"
description = "SprintStart is an AI-powered onboarding and training platform designed to support software teams by transforming scattered project artifacts into actionable, personalized project knowledge. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "rank-bm25>=0.2.2",
    "pypdf>=6.13.1",
    "openai>=2.41.0",
    "anthropic>=0.109.2",
    "pyyaml>=6.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=1.10.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",  # Depends() in default args is standard FastAPI pattern
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: end-to-end tests that require Ollama to be running",
]
filterwarnings = [
    "ignore::DeprecationWarning:chromadb",
]

[tool.coverage.run]
source = ["src"]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-cov",
    "httpx>=0.28.1",
    "pyyaml>=6.0",
    "rank-bm25",
    "rich>=14.0",
]
